# Hassio_Parmair

./: .gitignore  CHANGELOG.md  MODBUS_REGISTERS.md  README.md  hacs.json  pyproject.toml  requirements-test.txt  requirements.txt  test_connection.py  v2_register.md
.github/workflows/: tests.yml
custom_components/parmair/: __init__.py  button.py  config_flow.py  const.py  coordinator.py  fan.py  manifest.json  number.py  pymodbus_compat.py  select.py  sensor.py  strings.json  switch.py
custom_components/parmair/translations/: en.json  fi.json
docs/: PYMODBUS_HA_VERSIONS.md
tests/: __init__.py  conftest.py  test_interpretation.py
tests/fixtures/: MAC120-full-v2.json
tools/: README.md  discover_registers.py  dump_registers.py  mock_coordinator.py  test_interpretation.py
tools/test_fixtures/: README.md  mac120_v2.json
