[project]
name = "parmair-ha"
version = "0.9.0"
description = "Home Assistant integration for Parmair MAC ventilation units"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "ValtteriAho"}
]
keywords = ["home-assistant", "parmair", "ventilation", "modbus"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pymodbus>=3.11.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/ValtteriAho/Hassio_ParmAir"
Repository = "https://github.com/ValtteriAho/Hassio_ParmAir"
Issues = "https://github.com/ValtteriAho/Hassio_ParmAir/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*", "tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["custom_components/parmair", "tools"]
omit = ["*/__pycache__/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

